# Validating-NLAs

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/output-styles/: mech-interp-collaborator.md
Experiment 1/: readme.md
Experiment 1/Gemma 3 27B/: prompts.parquet  readme.md
Experiment 1/Gemma 3 27B/examples/: examples_exp1.csv
Experiment 1/Gemma 3 27B/src/: 01_verify_env.py  04_get_prompts.py  05_extract.py  06_label.py  07_build_direction.py  08_inject.py  09_decode.py  09_decode_real.py  09_real_build_set.py  09b_inspect.py  10_manual_inspect_cases.py  10_regex_score.py  10_score_responses.py  10c_analyze.py
Experiment 1/qwen-2_5-7b/: README.md  pyproject.toml
Experiment 1/qwen-2_5-7b/scripts/: ensure_toolchain.sh  launch_sglang_server.sh
Experiment 1/qwen-2_5-7b/src/: 01_verify_env.py  04_get_prompts.py  05_extract.py  06_label.py  07_build_direction.py  08_inject.py  08b_verify_direction.py  09_decode.py
Experiment 2/: readme.md
Experiment 2/CAA Vectors/data/: concept_pairs.parquet
Experiment 2/rebuild/: README.md  SGLANG.md  audits.py  concept_sources.py  confounds.py  flags.py  injection.py  paths.py  requirements.txt  test_audits.py  test_concepts.py  test_confounds.py  test_flags.py  test_injection.py  test_paths.py  test_sources.py
Experiment 3/: Readme.md
Experiment 3/src/: readme.md
docs/references/: known-corrections.md  literature.md  nla-infrastructure.md  papers.md
docs/specs/: exp2_spec.md  exp3_spec.md  experiment_1_result.md  experiment_1_spec.md  nla_validation_project_plan.md
(+116 files in other folders)
