[project]
name = "qwen-2-5-7b-nla-writeup"
version = "0.1.0"
description = "Environment for the Qwen-2.5-7B NLA Experiment 1 workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "datasets",
    "huggingface-hub",
    "httpx",
    "matplotlib",
    "numpy",
    "orjson",
    "pandas",
    "pyarrow",
    "pyyaml",
    "requests",
    "safetensors",
    "scikit-learn",
    "sentencepiece",
    "torch>=2.9.1,<2.10",
    "tqdm",
    "transformers>=4.57,<5",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
# Plain sglang (not [all]): [all] on 0.1.x pulled ancient vllm; 0.5.x bundles srt deps.
nla-server = [
    "sglang>=0.5.6,<0.6",
]
